--- a/package.json
+++ b/package.json
@@ -43,7 +43,13 @@
     ]
   },
   "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.1.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
